# MeiChat

./: .gitignore  README.md
core/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Channel.cpp  Channel.h  EventLoop.cpp  EventLoop.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  Makefile  TcpConnection.h  TcpServer.h
core/Common/: CRedisServer.cpp  CRedisServer.h  Callbacks.h  Code_c.h  noncopyable.h  singleton.h
core/Net/: InetAddress.cpp  InetAddress.h  Socket.cpp  Socket.h
core/Net/Poller/: EpollPoller.cpp  EpollPoller.h  PollPoller.cpp  PollPoller.h  Poller.cpp  Poller.h
core/TcpServer/: Acceptor.cpp  Acceptor.h  Buffer.h  EventLoop.cpp  EventLoop.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp
libs/: install_lib.sh
proto/: Makefile  common_msg.proto  cs_msg.proto  data_msg.proto  master_msg.proto  protocpp.bat  protogo.bat  ss_msg.proto
svr/chatServer/: CMakeLists.txt
svr/chatServer/src/: Makefile  makefile.share
svr/chatServer/src/app/: AppServer.cpp  AppServer.h  ConnectProxy.cpp  ConnectProxy.h  ProcesserManager.cpp  ProcesserManager.h
svr/chatServer/src/common/codec/: codec.cpp  codec.h
svr/chatServer/src/common/redisCliPool/: RedisCliPool.h  RedisClient.cpp
svr/chatServer/src/common/session/: Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
svr/chatServer/src/processer/: ConnectHandler.cpp  ConnectHandler.h
svr/conf/: db.conf  server.conf
svr/connect/: Dockerfile  docker-connect.run.xml  go.mod
svr/sql/: init_table.sh  meiChat_uid.sql
svr/user/: Dockerfile  docker-user.run.xml  go.mod
(+51 files in other folders)
